err/m3-objectpack.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/m3_objectpack-3.0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/objectpack'...
Compiling './lib/python3.5/site-packages/objectpack/actions.py'...
***   File "./lib/python3.5/site-packages/objectpack/actions.py", line 767
    except RelatedError, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/objectpack/demo'...
Compiling './lib/python3.5/site-packages/objectpack/demo/controller.py'...
***   File "./lib/python3.5/site-packages/objectpack/demo/controller.py", line 10
    print "Observer: %s" % msg
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/objectpack/dictionary_object_pack'...
Listing './lib/python3.5/site-packages/objectpack/locale'...
Listing './lib/python3.5/site-packages/objectpack/locale/en'...
Listing './lib/python3.5/site-packages/objectpack/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/objectpack/observer'...
Listing './lib/python3.5/site-packages/objectpack/slave_object_pack'...
Listing './lib/python3.5/site-packages/objectpack/static'...
Listing './lib/python3.5/site-packages/objectpack/static/css'...
Listing './lib/python3.5/site-packages/objectpack/static/css/filter'...
Listing './lib/python3.5/site-packages/objectpack/static/js'...
Listing './lib/python3.5/site-packages/objectpack/static/js/filter'...
Listing './lib/python3.5/site-packages/objectpack/static/js/menu'...
Listing './lib/python3.5/site-packages/objectpack/templates'...
Listing './lib/python3.5/site-packages/objectpack/tree_object_pack'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
